force-app/main/default/objects/blng__PaymentGateway__c/blng__PaymentGateway__c.object-meta.xml
<CustomObject>
    <description>Configuration object. The administrator should create one Account for the appropriate Payment Gateway.</description>
    <label>Payment Gateway</label>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>