force-app/main/default/objects/blng__PaymentGateway__c/fields/cybsbilling__Developer_ID__c.field-meta.xml
<CustomField>
    <fullName>cybsbilling__Developer_ID__c</fullName>
    <label>Developer ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>