force-app/main/default/objects/blng__PaymentGateway__c/fields/cybsbilling__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>cybsbilling__Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>