force-app/main/default/objects/blng__PaymentGateway__c/fields/cybsbilling__Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>cybsbilling__Merchant_ID__c</fullName>
    <label>Merchant ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>