force-app/main/default/objects/blng__PaymentGateway__c/fields/cybsbilling__Shared_Key__c.field-meta.xml
<CustomField>
    <fullName>cybsbilling__Shared_Key__c</fullName>
    <label>Shared Key</label>
    <length>150</length>
    <type>Text</type>
</CustomField>