force-app/main/default/objects/blng__PaymentGateway__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Active__c</columns>
    <columns>blng__Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Payment Gateways</label>
    <language>en_US</language>
</ListView>